SLING-12146 - skip the image build on Windows, and address the Sonar finding
The Windows run of PR #54 got through the whole test suite (183 tests, 0 failures,
0 errors), confirming the three fixes, and then failed building the container image:

    Unable to pull 'azul/zulu-openjdk-alpine:21' :
    no matching manifest for windows/amd64 10.0.17763 in the manifest list entries

The Dockerfile is FROM alpine, so a Windows docker daemon cannot pull the base image
at all; this is not something the Windows build can be made to do. Skip it there via
docker.skip so Windows keeps compiling and running the tests, and leave producing the
image to the Linux build.

Also switches the artifactFiles collector to Stream.toList() (java:S6204). The
emptyDirectories list below it is reversed in place, so that one stays mutable.